- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.10.1, 5.11.0, 5.11.1, 5.11.2
 - 
    None
 - 
    ubuntu16.04 + Qt5.11.2
 
- 
        
 - 
        7f57472e24a45a9cb56c7742f4c031405262ef98 (qt/qtdeclarative/5.11)
 
Hi ,
I try to call sendevent to simulate mouse click event . I use the attachment demo on Ubuntu 16.04 + Qt 5.11. It will crash directly . I tried a lot and find some interested things. You can check main.qml file . I put some comment on it .
- when I use mouseArea on the outside it will crashed directly , but I try it on Qt 5.9 , the crash not happen.
 - when I delete mouseArea the crash not happen
 
Another thing is strange . On Qt 5.9 , I use two different objects as parameter to call sendevent .
One is window , it will call sendevent successfully.
Another is window's child named mainroot , sendevent return true but nothing happens.